added dark mode based on system theme

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-background: 0deg 0% 98%;
+    --color-text: 200deg 15% 8%;
+    --color-accent: 0deg 0% 100%;
+    --color-input: 0deg 0% 52%;
+  }
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --color-background: 207deg 26% 17%;
+      --color-text: 0deg 0% 100%;
+      --color-accent: 209deg 23% 22%;
+      --color-input: 0deg 0% 100%;
+    }
+  }
+}
